[gd_scene load_steps=30 format=3 uid="uid://d2pjb4vkt1jxp"]

[ext_resource type="Texture2D" uid="uid://dfyn8v3lck432" path="res://Assets/Environment/Tutorial/TutorialBG.png" id="1_36f4f"]
[ext_resource type="Script" uid="uid://scg5jv6royml" path="res://Cudes/toturial.gd" id="1_blrru"]
[ext_resource type="Texture2D" uid="uid://bpdrprpwutgmh" path="res://Assets/Environment/Tutorial/JumpWall.png" id="2_72u6b"]
[ext_resource type="PackedScene" uid="uid://b3didptdh0kc4" path="res://Scenes/player.tscn" id="3_qe1h8"]
[ext_resource type="Texture2D" uid="uid://du6erld7kdru2" path="res://Assets/Environment/Tutorial/Dummy.png" id="4_p8xvp"]
[ext_resource type="FontFile" uid="uid://cxr4qkwbalr52" path="res://Assets/Fonts/m5x7.ttf" id="5_sxgbc"]
[ext_resource type="Texture2D" uid="uid://ckwadkph4sd3g" path="res://Assets/Environment/Tutorial/Exit.png" id="7_72oxd"]
[ext_resource type="Texture2D" uid="uid://b5asdtfhtsqe5" path="res://Assets/Characters/Player/PLWakeUp-Sheet.png" id="8_4eaj6"]
[ext_resource type="PackedScene" uid="uid://bgb10jbb52klp" path="res://Scenes/ui_key.tscn" id="9_whhpt"]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_qe1h8"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_blrru"]
size = Vector2(102, 212)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_p8xvp"]
radius = 15.0
height = 78.0

[sub_resource type="AtlasTexture" id="AtlasTexture_5ah7r"]
atlas = ExtResource("8_4eaj6")
region = Rect2(0, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_esr42"]
atlas = ExtResource("8_4eaj6")
region = Rect2(96, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_b0nuj"]
atlas = ExtResource("8_4eaj6")
region = Rect2(192, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_dgwdg"]
atlas = ExtResource("8_4eaj6")
region = Rect2(288, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_33xdx"]
atlas = ExtResource("8_4eaj6")
region = Rect2(384, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_at4bk"]
atlas = ExtResource("8_4eaj6")
region = Rect2(480, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_kg8jf"]
atlas = ExtResource("8_4eaj6")
region = Rect2(576, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_b1qve"]
atlas = ExtResource("8_4eaj6")
region = Rect2(672, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_k0ss0"]
atlas = ExtResource("8_4eaj6")
region = Rect2(768, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_tbx8c"]
atlas = ExtResource("8_4eaj6")
region = Rect2(864, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_504ri"]
atlas = ExtResource("8_4eaj6")
region = Rect2(960, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_500lo"]
atlas = ExtResource("8_4eaj6")
region = Rect2(1056, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_fe3tv"]
atlas = ExtResource("8_4eaj6")
region = Rect2(1248, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_d1pi1"]
atlas = ExtResource("8_4eaj6")
region = Rect2(1152, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_2wvd1"]
atlas = ExtResource("8_4eaj6")
region = Rect2(1152, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_sqo4u"]
atlas = ExtResource("8_4eaj6")
region = Rect2(0, 0, 96, 96)

[sub_resource type="SpriteFrames" id="SpriteFrames_whhpt"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5ah7r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_esr42")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b0nuj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dgwdg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_33xdx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_at4bk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kg8jf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b1qve")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k0ss0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tbx8c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_504ri")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_500lo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_500lo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fe3tv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fe3tv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fe3tv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d1pi1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2wvd1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2wvd1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2wvd1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fe3tv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fe3tv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fe3tv")
}],
"loop": false,
"name": &"Wakeup",
"speed": 6.5
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_sqo4u")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="Toturial" type="Node2D"]
script = ExtResource("1_blrru")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="fade" type="ColorRect" parent="CanvasLayer"]
offset_right = 1000.0
offset_bottom = 1000.0
color = Color(1, 1, 1, 0)

[node name="ColorRect" type="ColorRect" parent="."]
z_index = 1
offset_top = 360.0
offset_right = 5000.0
offset_bottom = 460.0
color = Color(0.713726, 0.705882, 0.568627, 1)

[node name="ColorRect2" type="ColorRect" parent="."]
self_modulate = Color(1, 1, 1, 0)
z_index = 5
offset_left = 3492.0
offset_top = -280.0
offset_right = 6492.0
offset_bottom = 360.0
color = Color(0.713726, 0.705882, 0.568627, 1)

[node name="Label" type="Label" parent="."]
offset_left = 410.0
offset_top = 211.0
offset_right = 767.0
offset_bottom = 272.0
pivot_offset = Vector2(176, 7)
theme_override_colors/font_color = Color(0.713726, 0.705882, 0.568627, 1)
theme_override_colors/font_outline_color = Color(0.305882, 0.298039, 0.145098, 1)
theme_override_constants/line_spacing = 2
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("5_sxgbc")
text = "Press  W  to Jump
or whatever u chose to Jump"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label7" type="Label" parent="."]
self_modulate = Color(0.490196, 0.403922, 0, 0.478431)
offset_left = 410.0
offset_top = 238.0
offset_right = 767.0
offset_bottom = 299.0
pivot_offset = Vector2(176, 7)
theme_override_colors/font_color = Color(0.713726, 0.705882, 0.568627, 1)
theme_override_colors/font_outline_color = Color(0.305882, 0.298039, 0.145098, 1)
theme_override_constants/line_spacing = 2
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("5_sxgbc")
text = "
ðŸ˜±ðŸ˜±ðŸ˜±"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="."]
offset_left = 858.0
offset_top = 211.0
offset_right = 1215.0
offset_bottom = 272.0
pivot_offset = Vector2(176, 7)
theme_override_colors/font_color = Color(0.713726, 0.705882, 0.568627, 1)
theme_override_colors/font_outline_color = Color(0.305882, 0.298039, 0.145098, 1)
theme_override_constants/line_spacing = 2
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("5_sxgbc")
text = "You can press  Space  to Dash
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label3" type="Label" parent="."]
offset_left = 1768.0
offset_top = 211.0
offset_right = 2125.0
offset_bottom = 272.0
pivot_offset = Vector2(176, 7)
theme_override_colors/font_color = Color(0.713726, 0.705882, 0.568627, 1)
theme_override_colors/font_outline_color = Color(0.305882, 0.298039, 0.145098, 1)
theme_override_constants/line_spacing = 2
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("5_sxgbc")
text = "You can do a Directional Dash
by holding one or two movement buttons 
when dashing. E.G (W) , (W + D) , ...
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label4" type="Label" parent="."]
offset_left = 2322.0
offset_top = 211.0
offset_right = 2679.0
offset_bottom = 272.0
pivot_offset = Vector2(176, 7)
theme_override_colors/font_color = Color(0.713726, 0.705882, 0.568627, 1)
theme_override_colors/font_outline_color = Color(0.305882, 0.298039, 0.145098, 1)
theme_override_constants/line_spacing = 2
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("5_sxgbc")
text = "You can Attack by clicking 
Left Mouse Button
or what u bind it to >:("
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label5" type="Label" parent="."]
offset_left = 2471.0
offset_top = 236.0
offset_right = 2828.0
offset_bottom = 297.0
pivot_offset = Vector2(176, 7)
theme_override_colors/font_color = Color(0.713726, 0.705882, 0.568627, 1)
theme_override_colors/font_outline_color = Color(0.305882, 0.298039, 0.145098, 1)
theme_override_constants/line_spacing = 2
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("5_sxgbc")
text = "Billy"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label6" type="Label" parent="."]
offset_left = 2891.0
offset_top = 211.0
offset_right = 3248.0
offset_bottom = 272.0
pivot_offset = Vector2(176, 7)
theme_override_colors/font_color = Color(0.713726, 0.705882, 0.568627, 1)
theme_override_colors/font_outline_color = Color(0.305882, 0.298039, 0.145098, 1)
theme_override_constants/line_spacing = 2
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("5_sxgbc")
text = "You can Also Hold  Shift  while moving to Walk
it has no purpose though"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2(640, 360)

[node name="TutorialBg" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2(320, 180)
texture = ExtResource("1_36f4f")

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(232, 358)
shape = SubResource("WorldBoundaryShape2D_qe1h8")

[node name="ColorRect" type="ColorRect" parent="StaticBody2D"]
offset_top = 356.0
offset_right = 5000.0
offset_bottom = 360.0
color = Color(0.305882, 0.298039, 0.145098, 1)

[node name="JumpWall0" type="StaticBody2D" parent="."]
position = Vector2(-51, 254)

[node name="Sprite2D" type="Sprite2D" parent="JumpWall0"]
texture = ExtResource("2_72u6b")

[node name="CollisionShape2D" type="CollisionShape2D" parent="JumpWall0"]
shape = SubResource("RectangleShape2D_blrru")

[node name="JumpWall" type="StaticBody2D" parent="."]
position = Vector2(1313, 406)

[node name="Sprite2D" type="Sprite2D" parent="JumpWall"]
texture = ExtResource("2_72u6b")

[node name="CollisionShape2D" type="CollisionShape2D" parent="JumpWall"]
shape = SubResource("RectangleShape2D_blrru")

[node name="JumpWall4" type="StaticBody2D" parent="."]
position = Vector2(740, 406)

[node name="Sprite2D" type="Sprite2D" parent="JumpWall4"]
texture = ExtResource("2_72u6b")

[node name="CollisionShape2D" type="CollisionShape2D" parent="JumpWall4"]
shape = SubResource("RectangleShape2D_blrru")

[node name="JumpWall2" type="StaticBody2D" parent="."]
position = Vector2(2222, 327)

[node name="Sprite2D" type="Sprite2D" parent="JumpWall2"]
texture = ExtResource("2_72u6b")

[node name="CollisionShape2D" type="CollisionShape2D" parent="JumpWall2"]
shape = SubResource("RectangleShape2D_blrru")

[node name="JumpWall3" type="StaticBody2D" parent="."]
position = Vector2(1722, 373)

[node name="Sprite2D" type="Sprite2D" parent="JumpWall3"]
texture = ExtResource("2_72u6b")

[node name="CollisionShape2D" type="CollisionShape2D" parent="JumpWall3"]
shape = SubResource("RectangleShape2D_blrru")

[node name="Player" parent="." instance=ExtResource("3_qe1h8")]
z_index = 4
position = Vector2(2503, 282)

[node name="Dummy" type="RigidBody2D" parent="."]
z_index = 3
position = Vector2(2640, 357)
gravity_scale = 0.0

[node name="Dummy" type="Sprite2D" parent="Dummy"]
texture = ExtResource("4_p8xvp")
offset = Vector2(5, -38)

[node name="Area2D" type="Area2D" parent="Dummy/Dummy"]
position = Vector2(7, -40)
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Dummy/Dummy/Area2D"]
shape = SubResource("CapsuleShape2D_p8xvp")

[node name="Exit" type="Sprite2D" parent="."]
position = Vector2(3454, 293.5)
texture = ExtResource("7_72oxd")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
z_index = 1
position = Vector2(316, 314)
sprite_frames = SubResource("SpriteFrames_whhpt")
animation = &"Wakeup"

[node name="Ui_Key" parent="." instance=ExtResource("9_whhpt")]
position = Vector2(328, 302)

[node name="Camera2D" type="Camera2D" parent="."]

[node name="ColorRect3" type="ColorRect" parent="."]
self_modulate = Color(1, 1, 1, 0)
offset_left = 551.0
offset_top = 248.0
offset_right = 628.0
offset_bottom = 278.0
color = Color(0.713726, 0.705882, 0.568627, 1)

[connection signal="area_entered" from="Dummy/Dummy/Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
